# qii-workshop

./: README.md  creds_for_qiii_qedma_api.env  creds_for_qiii_qiskit_function.env  grader.py  grader_qf.py  pyproject.toml  qesem_lab_qedma_api.ipynb  qesem_lab_qedma_api_remove.ipynb  qesem_lab_qiskit_function.ipynb  qesem_lab_solution_qedma_api.ipynb  qesem_lab_solution_qiskit_function.ipynb  real_hardware_bonus_qf.txt
